Stage 3: Implementation