@@ -6,7 +6,7 @@ import org.slf4j.LoggerFactory;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 public final class ServerImpl {
@@ -20,12 +20,17 @@ public final class ServerImpl {
     public static void main(String[] args) {
         try {
             int port = 19234;
-            String url = "http://localhost:" + port;
+            int port2 = 19235;
+            int port3 = 19236;
+            String localhost = "http://localhost:";
+            String url = localhost + port;
+            String url2 = localhost + port2;
+            String url3 = localhost + port3;
             Path path = Files.createTempDirectory("server");
             ServiceConfig cfg = new ServiceConfig(
                     port,
                     url,
-                    Collections.singletonList(url),
+                    List.of(url, url2, url3),
                     path
             );
             new ServiceImpl(cfg).start().get(1, TimeUnit.SECONDS);
